--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Integration project</title>
   </head>
   <body>
-    <h2> Test </h2>
-    <script type="module" src="/main.js"></script>
+    <h2>Test</h2>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
