--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Integration project</title>
   </head>
   <body>
-    <h2>Test</h2>
+   <main>
+    <header class="intro">
+<img src="./assets/" alt="">
+    </header>
+   </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
