--- a/index.html
+++ b/index.html
@@ -6,11 +6,37 @@
     <title>Integration project</title>
   </head>
   <body>
-   <main>
-    <header class="intro">
-<img src="./assets/" alt="">
-    </header>
-   </main>
+    <main>
+      <header class="intro">
+        <div class="intro__navigation">
+          <img src="./assets/Logo MIM .png" alt="" width="40%" />
+          <p class="intro__navigation__language">NL EN FR</p>
+        </div>
+        <div class="intro__welcome">
+          <div class="intro__title">
+            <h1>Welcome</h1>
+            <span class="intro__title--small">to</span>
+          </div>
+          <div class="intro__loveStory">
+            <h1 class="intro__the">the</h1>
+            <img src="./assets/Love story.png" width="50%" alt="" />
+          </div>
+        </div>
+        <img src="./assets/Adolphe Sax finish.png" alt="Adolphe Sax playing Saxophone" />
+
+        <p class="intro__body">
+          This is a romentic love story from the inventor an musician Adolphe
+          Sax and his beloved girlfriend Sapphire. <br />
+        </p>
+        <p class="intro__body--red">Scroll down for the full story</p>
+        <div class="intro__arrows">
+          <img src="./assets/Yellow arrow.png" width="15%" alt="Yellow love heart" />
+          <img src="./assets/Yellow arrow.png" width="15%" alt="Yellow love heart" />
+          <img src="./assets/Yellow arrow.png" width="15%" alt="Yellow love heart" />
+          <img src="./assets/Yellow arrow.png" width="15%" alt="Yellow love heart" />
+        </div>
+      </header>
+    </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
