--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
             <span class="intro__title--small">to</span>
           </div>
           <div class="intro__loveStory">
-            <h1 class="intro__the">the</h1>
+            <h1>the</h1>
             <img src="./assets/Love story.png" width="50%" alt="" />
           </div>
         </div>
+        <img class="backgroundAdolphe" src="./assets/Background behind Adolphe.png" width="100%" alt="">
         <img src="./assets/Adolphe Sax finish.png" alt="Adolphe Sax playing Saxophone" />
 
         <p class="intro__body">
