Add laptop media query and design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main>
       <header class="intro">
         <div class="intro__navigation">
-          <img src="./assets/Logo MIM .png" alt="" width="40%" />
+          <img class="intro__logoMim" src="./assets/Logo MIM .png" alt="" />
           <p class="intro__navigation__language">NL EN FR</p>
         </div>
         <div class="intro__welcome">
@@ -19,11 +19,13 @@
           </div>
           <div class="intro__loveStory">
             <h1>the</h1>
-            <img src="./assets/Love story.png" width="50%" alt="" />
+            <img class="intro__loveStory--img" src="./assets/Love story.png" alt="" />
           </div>
         </div>
-        <img class="backgroundAdolphe" src="./assets/Background behind Adolphe.png" width="100%" alt="">
-        <img src="./assets/Adolphe Sax finish.png" alt="Adolphe Sax playing Saxophone" />
+        <picture>
+          <img class="backgroundAdolphe" src="./assets/Background behind Adolphe.png" alt="">
+          <img class="adolpheSax" src="./assets/Adolphe Sax finish.png" alt="Adolphe Sax playing Saxophone" />
+        </picture>
 
         <p class="intro__body">
           This is a romentic love story from the inventor an musician Adolphe
@@ -31,10 +33,10 @@
         </p>
         <p class="intro__body--red">Scroll down for the full story</p>
         <div class="intro__arrows">
-          <img src="./assets/Yellow arrow.png" width="12%" alt="Yellow love heart" />
-          <img src="./assets/Yellow arrow.png" width="12%" alt="Yellow love heart" />
-          <img src="./assets/Yellow arrow.png" width="12%" alt="Yellow love heart" />
-          <img src="./assets/Yellow arrow.png" width="12%" alt="Yellow love heart" />
+          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love heart" />
+          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love heart" />
+          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love heart" />
+          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love heart" />
         </div>
       </header>
     </main>
