Adding styling on desktop with media query

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <img class="intro__loveStory--img" src="./assets/Love story.png" alt="" />
           </div>
         </div>
-        <picture>
+          <hr>
+        <picture class="adolphe">
           <img class="backgroundAdolphe" src="./assets/Background behind Adolphe.png" alt="">
           <img class="adolpheSax" src="./assets/Adolphe Sax finish.png" alt="Adolphe Sax playing Saxophone" />
         </picture>
