Adding new folder for header images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main>
       <header class="intro">
         <div class="intro__navigation">
-          <img class="intro__logoMim" src="./assets/mobile/logo-MIM.png" alt="" />
+          <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png" alt="" />
           <p class="intro__navigation__language">NL EN FR</p>
         </div>
         <div class="intro__welcome">
@@ -20,20 +20,20 @@
           <div class="intro__loveStory">
             <h1>the</h1>
             <picture>
-              <source media="(max-width: 390px)" srcset="/assets/mobile/love-story.png">
+              <source media="(max-width: 390px)" srcset="/assets/mobile/header/love-story.png">
               <source media="(min-width: 834px)" srcset="/assets/ipad/love-story.png">
-              <img src="./assets/mobile/love-story.png" alt="">
+              <img src="./assets/mobile/header/love-story.png" alt="">
             </picture>
           </div>
            <hr>
         </div>
          
         <picture>
-          <img class="backgroundAdolphe" src="./assets/mobile/background-behind-adolphe.png" alt="">
-          <source media="(max-width: 390px)" srcset="/assets/mobile/adolphe-sax.png">
+          <img class="backgroundAdolphe" src="./assets/mobile/header/background-behind-adolphe.png" alt="">
+          <source media="(max-width: 390px)" srcset="/assets/mobile/header/adolphe-sax.png">
           <source media="(min-width: 834px and max-width: 1512px)" srcset="/assets/ipad/adolphe-sax.png">
           <source media="(min-width: 1512px)" srcset="/assets/desktop/adolphe-sax.png">
-          <img class="adolpheSax" src="./assets/mobile/adolphe-sax.png" alt="">
+          <img class="adolpheSax" src="./assets/mobile/header/adolphe-sax.png" alt="">
         </picture>
 
         <p class="intro__body">
