--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <main>
       <header class="intro">
         <div class="intro__navigation">
-          <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png" alt="" />
+          <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png"
+            alt="" />
           <p class="intro__navigation__language">NL EN FR</p>
         </div>
         <div class="intro__welcome">
@@ -20,19 +21,26 @@
           <div class="intro__loveStory">
             <h1>the</h1>
             <picture>
-              <source media="(max-width: 390px)" srcset="/assets/mobile/header/love-story.png">
-              <source media="(min-width: 834px)" srcset="/assets/ipad/love-story.png">
+              <source media="(max-width: 390px)"
+                srcset="/assets/mobile/header/love-story.png">
+              <source media="(min-width: 834px)"
+                srcset="/assets/ipad/love-story.png">
               <img src="./assets/mobile/header/love-story.png" alt="">
             </picture>
           </div>
-           <hr>
+          <hr>
         </div>
         <picture>
-          <img class="backgroundAdolphe" src="./assets/mobile/header/background-behind-adolphe.png" alt="">
-          <source media="(max-width: 390px)" srcset="/assets/mobile/header/adolphe-sax.png">
-          <source media="(min-width: 834px and max-width: 1512px)" srcset="/assets/ipad/adolphe-sax.png">
-          <source media="(min-width: 1512px)" srcset="/assets/desktop/adolphe-sax.png">
-          <img class="adolpheSax" src="./assets/mobile/header/adolphe-sax.png" alt="">
+          <img class="backgroundAdolphe"
+            src="./assets/mobile/header/background-behind-adolphe.png" alt="">
+          <source media="(max-width: 390px)"
+            srcset="/assets/mobile/header/adolphe-sax.png">
+          <source media="(min-width: 834px and max-width: 1512px)"
+            srcset="/assets/ipad/adolphe-sax.png">
+          <source media="(min-width: 1512px)"
+            srcset="/assets/desktop/adolphe-sax.png">
+          <img class="adolpheSax" src="./assets/mobile/header/adolphe-sax.png"
+            alt="">
         </picture>
 
         <p class="intro__body">
@@ -41,27 +49,51 @@
         </p>
         <p class="intro__body--red">Scroll down for the full story</p>
         <div class="intro__arrows">
-          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love heart" />
-          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love heart" />
-          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love heart" />
-          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love heart" />
+          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love
+            heart" />
+          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love
+            heart" />
+          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love
+            heart" />
+          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love
+            heart" />
         </div>
       </header>
 
       <!-- Section 2 -->
       <section class="sectionTwo">
         <picture>
-          <source media="(min-width: 390px)" srcset="/assets/mobile/sectionTwo/adolphe-sax-red.png">
+          <source media="(min-width: 390px)"
+            srcset="/assets/mobile/sectionTwo/adolphe-sax-red.png">
           <!-- <source media="(min-width: 834px and max-width: 1512px)" srcset="/assets/ipad/adolphe-sax.png">
           <source media="(min-width: 1512px)" srcset="/assets/desktop/adolphe-sax.png"> -->
-          <img class="adolpheSax" src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
+          <img class="adolpheSax"
+            src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
         </picture>
+
+
+        <!-- Arrow image -->
+        <p>I am passioned for music and mechanics, and spent my entire life
+          experimenting with different instruments.</p>
+
+        <!-- Arrow image -->
+        <p>My hometown is Dinant in Belgium and I’m the creator of the
+          Saxophone. </p>
+
+        <picture>
+          <source media="(min-width: 390px)"
+            srcset="/assets/mobile/sectionTwo/secret-paper.png">
+          <img class="adolpheSax"
+            src="./assets/mobile/sectionTwo/secret-paper.png" alt="">
+        </picture>
+
       </section>
 
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
