Adding grid for intro

--- a/index.html
+++ b/index.html
@@ -7,7 +7,46 @@
   </head>
   <body>
     <main>
-      <header class="intro">
+      <section class="intro">
+        <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png" alt="">
+        <div class="intro__body">
+          <p class="intro__title">Welcome <span class="intro__title--small">to</span></p>
+          <p class="intro__title">the
+            <picture>
+              <source media="(max-width: 390px)"
+                srcset="/assets/mobile/header/love-story.png">
+              <source media="(min-width: 834px)"
+                srcset="/assets/ipad/love-story.png">
+              <img class="loveStory" src="./assets/mobile/header/love-story.png"
+                alt="">
+            </picture>
+          </p>
+
+        </div>
+        <img src="./assets/mobile/header/adolphe-sax.png" alt="">
+        <p class="intro__text">This is a romantic love story from the inventor an musician Adolphe
+          Sax and his beloved girlfriend Sapphire. Scroll down for the full
+          story</p>
+      </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <!-- <header class="intro">
         <div class="intro__navigation">
           <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png"
             alt="" />
@@ -57,27 +96,26 @@
             heart" />
           <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love
             heart" />
-        </div>
-      </header>
+        </div> -->
+      <!-- </header> -->
 
       <!-- Section 2 -->
-      <section class="sectionTwo">
-        <picture>
-          <source media="(min-width: 390px)"
-            srcset="/assets/mobile/sectionTwo/adolphe-sax-red.png">
-          <!-- <source media="(min-width: 834px and max-width: 1512px)" srcset="/assets/ipad/adolphe-sax.png">
-          <source media="(min-width: 1512px)" srcset="/assets/desktop/adolphe-sax.png"> -->
-          <img class="adolpheSax"
-            src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
-        </picture>
-
-
-        <!-- Arrow image -->
-        <p>I am passioned for music and mechanics, and spent my entire life
-          experimenting with different instruments.</p>
-
-        <!-- Arrow image -->
-        <p>My hometown is Dinant in Belgium and I’m the creator of the
+      <!-- <picture>
+        <source media="(min-width: 390px)"
+          srcset="/assets/mobile/sectionTwo/adolphe-sax-red.png">
+        <source media="(min-width: 834px and max-width: 1512px)" srcset="/assets/ipad/adolphe-sax.png">
+        <source media="(min-width: 1512px)" srcset="/assets/desktop/adolphe-sax.png">
+        <img class="sectionTwo__adolphe"
+          src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
+      </picture>
+      <section class="sectionTwo"> -->
+      <!-- <br> -->
+      <!-- Arrow image -->
+      <!-- <p>I am passioned for music and mechanics, and spent my entire life
+          experimenting with different instruments.</p> -->
+      <!-- <br> -->
+      <!-- Arrow image -->
+      <!-- <p>My hometown is Dinant in Belgium and I’m the creator of the
           Saxophone. </p>
 
         <picture>
@@ -86,9 +124,7 @@
           <img class="adolpheSax"
             src="./assets/mobile/sectionTwo/secret-paper.png" alt="">
         </picture>
-
-      </section>
-
+      </section> -->
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
