Add frontpage styling with grid

--- a/index.html
+++ b/index.html
@@ -23,10 +23,24 @@
           </p>
 
         </div>
-        <img src="./assets/mobile/header/adolphe-sax.png" alt="">
+        <div class="intro__adolpheSax">
+          <img class="intro__img" src="./assets/mobile/header/adolphe-sax.png" alt="">
+        </div>
+        
         <p class="intro__text">This is a romantic love story from the inventor an musician Adolphe
-          Sax and his beloved girlfriend Sapphire. Scroll down for the full
-          story</p>
+          Sax and his beloved girlfriend Sapphire. </p> 
+          <p class="intro__text--scroll">Scroll down for the full</p>
+
+          <div class="intro__arrows">
+          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png" alt="Yellow love
+            heart" />
+        <img class="arrows" src="./assets/mobile/header/yellow-arrow.png" alt="Yellow love
+            heart" />
+        <img class="arrows" src="./assets/mobile/header/yellow-arrow.png" alt="Yellow love
+            heart" />
+        <img class="arrows" src="./assets/mobile/header/yellow-arrow.png" alt="Yellow love
+            heart" />
+        </div> 
       </section>
 
 
