Add responsive ipad

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <body>
     <main>
       <section class="intro">
-        <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png" alt="">
+        <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png"
+          alt="">
         <div class="intro__body">
-          <p class="intro__title">Welcome <span class="intro__title--small">to</span></p>
+          <h1 class="intro__title">Welcome <span class="intro__title--small">to</span></h1>
           <p class="intro__title">the
             <picture>
               <source media="(max-width: 390px)"
@@ -21,26 +22,31 @@
                 alt="">
             </picture>
           </p>
-
         </div>
         <div class="intro__adolpheSax">
-          <img class="intro__img" src="./assets/mobile/header/adolphe-sax.png" alt="">
+          <img class="intro__img" src="./assets/mobile/header/adolphe-sax.png"
+            alt="">
         </div>
-        
-        <p class="intro__text">This is a romantic love story from the inventor an musician Adolphe
-          Sax and his beloved girlfriend Sapphire. </p> 
-          <p class="intro__text--scroll">Scroll down for the full</p>
 
-          <div class="intro__arrows">
-          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png" alt="Yellow love
+        <p class="intro__text">This is a romantic love story from the inventor
+          an musician Adolphe
+          Sax and his beloved girlfriend Sapphire. </p>
+        <p class="intro__text--scroll">Scroll down for the full</p>
+
+        <div class="intro__arrows">
+          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+            alt="Yellow love
             heart" />
-        <img class="arrows" src="./assets/mobile/header/yellow-arrow.png" alt="Yellow love
+          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+            alt="Yellow love
             heart" />
-        <img class="arrows" src="./assets/mobile/header/yellow-arrow.png" alt="Yellow love
+          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+            alt="Yellow love
             heart" />
-        <img class="arrows" src="./assets/mobile/header/yellow-arrow.png" alt="Yellow love
+          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+            alt="Yellow love
             heart" />
-        </div> 
+        </div>
       </section>
 
 
@@ -60,85 +66,7 @@
 
 
 
-      <!-- <header class="intro">
-        <div class="intro__navigation">
-          <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png"
-            alt="" />
-          <p class="intro__navigation__language">NL EN FR</p>
-        </div>
-        <div class="intro__welcome">
-          <div class="intro__title">
-            <h1>Welcome</h1>
-            <span class="intro__title--small">to</span>
-          </div>
-          <div class="intro__loveStory">
-            <h1>the</h1>
-            <picture>
-              <source media="(max-width: 390px)"
-                srcset="/assets/mobile/header/love-story.png">
-              <source media="(min-width: 834px)"
-                srcset="/assets/ipad/love-story.png">
-              <img src="./assets/mobile/header/love-story.png" alt="">
-            </picture>
-          </div>
-          <hr>
-        </div>
-        <picture>
-          <img class="backgroundAdolphe"
-            src="./assets/mobile/header/background-behind-adolphe.png" alt="">
-          <source media="(max-width: 390px)"
-            srcset="/assets/mobile/header/adolphe-sax.png">
-          <source media="(min-width: 834px and max-width: 1512px)"
-            srcset="/assets/ipad/adolphe-sax.png">
-          <source media="(min-width: 1512px)"
-            srcset="/assets/desktop/adolphe-sax.png">
-          <img class="adolpheSax" src="./assets/mobile/header/adolphe-sax.png"
-            alt="">
-        </picture>
 
-        <p class="intro__body">
-          This is a romentic love story from the inventor an musician Adolphe
-          Sax and his beloved girlfriend Sapphire. <br />
-        </p>
-        <p class="intro__body--red">Scroll down for the full story</p>
-        <div class="intro__arrows">
-          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love
-            heart" />
-          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love
-            heart" />
-          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love
-            heart" />
-          <img class="arrows" src="./assets/Yellow arrow.png" alt="Yellow love
-            heart" />
-        </div> -->
-      <!-- </header> -->
-
-      <!-- Section 2 -->
-      <!-- <picture>
-        <source media="(min-width: 390px)"
-          srcset="/assets/mobile/sectionTwo/adolphe-sax-red.png">
-        <source media="(min-width: 834px and max-width: 1512px)" srcset="/assets/ipad/adolphe-sax.png">
-        <source media="(min-width: 1512px)" srcset="/assets/desktop/adolphe-sax.png">
-        <img class="sectionTwo__adolphe"
-          src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
-      </picture>
-      <section class="sectionTwo"> -->
-      <!-- <br> -->
-      <!-- Arrow image -->
-      <!-- <p>I am passioned for music and mechanics, and spent my entire life
-          experimenting with different instruments.</p> -->
-      <!-- <br> -->
-      <!-- Arrow image -->
-      <!-- <p>My hometown is Dinant in Belgium and I’m the creator of the
-          Saxophone. </p>
-
-        <picture>
-          <source media="(min-width: 390px)"
-            srcset="/assets/mobile/sectionTwo/secret-paper.png">
-          <img class="adolpheSax"
-            src="./assets/mobile/sectionTwo/secret-paper.png" alt="">
-        </picture>
-      </section> -->
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
