Add content section 2

--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
           </p>
         </div>
         <div class="intro__adolpheSax">
-          <img class="intro__img" src="./assets/mobile/header/adolphe-sax.png"
-            alt="">
+          <picture>
+            <source media="(min-width: 834px) and (max-width: 1511px)"
+              srcset="/assets/ipad/adolphe-sax.png">
+            <source media="(min-width: 1512px)"
+              srcset="/assets/desktop/adolphe-sax.png">
+            <img class="intro__img" src="./assets/mobile/header/adolphe-sax.png"
+              alt="">
+          </picture>
         </div>
 
         <p class="intro__text">This is a romantic love story from the inventor
           an musician Adolphe
           Sax and his beloved girlfriend Sapphire. </p>
-        <p class="intro__text--scroll">Scroll down for the full</p>
+        <p class="intro__text--scroll">Scroll down for the full story</p>
 
         <div class="intro__arrows">
           <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
@@ -47,6 +53,19 @@
             alt="Yellow love
             heart" />
         </div>
+      </section>
+
+      <section class="sectionTwo">
+        <img src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
+        <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
+        <p>I am passionned for music and mechanics, and spent my entire life
+          experimenting with different instruments.</p>
+        <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
+        <p>My hometown is Dinant in Belgium and I’m the creator of the Saxophone. </p>
+        <img src="./assets/mobile/sectionTwo/secret-button.png" alt="">
+
+        
+
       </section>
 
 
