Styling sectionTwo mobile

--- a/index.html
+++ b/index.html
@@ -56,17 +56,20 @@
       </section>
 
       <section class="sectionTwo">
-        <img src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
-        <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
-        <p>I am passionned for music and mechanics, and spent my entire life
-          experimenting with different instruments.</p>
-        <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
-        <p>My hometown is Dinant in Belgium and I’m the creator of the Saxophone. </p>
-        <img src="./assets/mobile/sectionTwo/secret-button.png" alt="">
-
-        
-
+        <h1 class="sectionTwo__title">Adolphe Sax <br> 1814-1894</h1>
+        <img class="sectionTwo__adolphe" src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
+        <div class="sectionTwo__text">
+          <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
+          <p>I am passionned for music and mechanics, and spent my entire life
+            experimenting with different instruments.</p>
+        </div>
+        <div class="sectionTwo__text">
+          <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
+          <p>My hometown is Dinant in Belgium and I’m the creator of the Saxophone. </p>
+        </div>
+        <img class="sectionTwo__secretButton" src="./assets/mobile/sectionTwo/secret-button.png" alt="">        
       </section>
+      <img class="sectionTwo__mannekePis" src="./assets/mobile/sectionTwo/manneke-pis.png" alt="">
 
 
 
