Adding section three and section four. Styling those section ass well

--- a/index.html
+++ b/index.html
@@ -7,72 +7,103 @@
   </head>
   <body>
     <main>
-      <section class="intro">
-        <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png"
-          alt="">
-        <div class="intro__body">
-          <h1 class="intro__title">Welcome <span class="intro__title--small">to</span></h1>
-          <p class="intro__title">the
+      <section class="intro__background">
+        <div class="intro">
+          <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png"
+            alt="">
+          <div class="intro__body">
+            <h1 class="intro__title">Welcome <span class="intro__title--small">to</span></h1>
+            <p class="intro__title">the
+              <picture>
+                <source media="(max-width: 390px)"
+                  srcset="/assets/mobile/header/love-story.png">
+                <source media="(min-width: 834px)"
+                  srcset="/assets/ipad/love-story.png">
+                <img class="loveStory"
+                  src="./assets/mobile/header/love-story.png"
+                  alt="">
+              </picture>
+            </p>
+          </div>
+          <div class="intro__adolpheSax">
             <picture>
-              <source media="(max-width: 390px)"
-                srcset="/assets/mobile/header/love-story.png">
-              <source media="(min-width: 834px)"
-                srcset="/assets/ipad/love-story.png">
-              <img class="loveStory" src="./assets/mobile/header/love-story.png"
+              <source media="(min-width: 834px) and (max-width: 1512px)"
+                srcset="/assets/ipad/adolphe-sax.png">
+              <source media="(min-width: 1512px)"
+                srcset="/assets/desktop/adolphe-sax.png">
+              <img class="intro__img"
+                src="./assets/mobile/header/adolphe-sax.png"
                 alt="">
             </picture>
-          </p>
-        </div>
-        <div class="intro__adolpheSax">
-          <picture>
-            <source media="(min-width: 834px) and (max-width: 1511px)"
-              srcset="/assets/ipad/adolphe-sax.png">
-            <source media="(min-width: 1512px)"
-              srcset="/assets/desktop/adolphe-sax.png">
-            <img class="intro__img" src="./assets/mobile/header/adolphe-sax.png"
-              alt="">
-          </picture>
-        </div>
+          </div>
 
-        <p class="intro__text">This is a romantic love story from the inventor
-          an musician Adolphe
-          Sax and his beloved girlfriend Sapphire. </p>
-        <p class="intro__text--scroll">Scroll down for the full story</p>
+          <p class="intro__text">This is a romantic love story from the inventor
+            an musician Adolphe
+            Sax and his beloved girlfriend Sapphire. </p>
+          <p class="intro__text--scroll">Scroll down for the full story</p>
 
-        <div class="intro__arrows">
-          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
-            alt="Yellow love
-            heart" />
-          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
-            alt="Yellow love
-            heart" />
-          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
-            alt="Yellow love
-            heart" />
-          <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
-            alt="Yellow love
-            heart" />
+          <div class="intro__arrows">
+            <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+              alt="Yellow love
+              heart" />
+            <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+              alt="Yellow love
+              heart" />
+            <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+              alt="Yellow love
+              heart" />
+            <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+              alt="Yellow love
+              heart" />
+          </div>
         </div>
       </section>
 
-      <section class="sectionTwo">
-        <h1 class="sectionTwo__title">Adolphe Sax <br> 1814-1894</h1>
-        <img class="sectionTwo__adolphe" src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
-        <div class="sectionTwo__text">
-          <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
-          <p>I am passionned for music and mechanics, and spent my entire life
-            experimenting with different instruments.</p>
+      <!-- SectionTwo - About AdolpheSax -->
+      <section class="background">
+        <div class="sectionTwo">
+          <h1 class="sectionTwo__title">Adolphe Sax <br> 1814-1894</h1>
+          <img class="sectionTwo__adolphe"
+            src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
+          <div class="sectionTwo__text">
+            <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
+            <p>I am passionned for music and mechanics, and spent my entire life
+              experimenting with different instruments.</p>
+          </div>
+          <div class="sectionTwo__text">
+            <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
+            <p>My hometown is Dinant in Belgium and I’m the creator of the
+              Saxophone. </p>
+          </div>
+          <img class="sectionTwo__secretButton"
+            src="./assets/mobile/sectionTwo/secret-button.png" alt="">
+        </section>
+        <!-- <img class="sectionTwo__mannekePis"
+          src="./assets/mobile/sectionTwo/manneke-pis.png" alt=""> -->
+      </div>
+
+      <!-- Adolphe and Sapphire -->
+      <section class="background__sectionThree">
+        <div class="sectionThree">
+          <img class="head__adolphe"
+            src="./assets/mobile/adolph-and-sapphire/head-adolphe.png" alt="">
+          <img class="flowers"
+            src="./assets/mobile/adolph-and-sapphire/heart-flowers.png" alt="">
+          <img class="saxophone"
+            src="./assets/mobile/adolph-and-sapphire/saxophone.png" alt="">
         </div>
-        <div class="sectionTwo__text">
-          <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
-          <p>My hometown is Dinant in Belgium and I’m the creator of the Saxophone. </p>
-        </div>
-        <img class="sectionTwo__secretButton" src="./assets/mobile/sectionTwo/secret-button.png" alt="">        
       </section>
-      <img class="sectionTwo__mannekePis" src="./assets/mobile/sectionTwo/manneke-pis.png" alt="">
 
+      <!-- Features -->
 
-
+      <section class="background__features">
+        <div class="features">
+          <p>The</p>
+          <p>features</p>
+          <p>Adolphe</p>
+          <img src="./assets/mobile/features/loves.png" alt="">
+        </div>
+      </section>
 
 
 
