Adding anitmation on intropage

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
           <p class="intro__text--scroll">Scroll down for the full story</p>
 
           <div class="intro__arrows">
-            <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+            <img class="arrows arrowOne" src="./assets/mobile/header/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+            <img class="arrows arrowTwo" src="./assets/mobile/header/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+            <img class="arrows arrowThree" src="./assets/mobile/header/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows" src="./assets/mobile/header/yellow-arrow.png"
+            <img class="arrows arrowFour" src="./assets/mobile/header/yellow-arrow.png"
               alt="Yellow love
               heart" />
           </div>
