Add styline from section features mobile

--- a/index.html
+++ b/index.html
@@ -43,16 +43,20 @@
           <p class="intro__text--scroll">Scroll down for the full story</p>
 
           <div class="intro__arrows">
-            <img class="arrows arrowOne" src="./assets/mobile/header/yellow-arrow.png"
+            <img class="arrows arrowOne"
+              src="./assets/mobile/header/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows arrowTwo" src="./assets/mobile/header/yellow-arrow.png"
+            <img class="arrows arrowTwo"
+              src="./assets/mobile/header/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows arrowThree" src="./assets/mobile/header/yellow-arrow.png"
+            <img class="arrows arrowThree"
+              src="./assets/mobile/header/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows arrowFour" src="./assets/mobile/header/yellow-arrow.png"
+            <img class="arrows arrowFour"
+              src="./assets/mobile/header/yellow-arrow.png"
               alt="Yellow love
               heart" />
           </div>
@@ -98,10 +102,14 @@
 
       <section class="background__features">
         <div class="features">
-          <p>The</p>
-          <p>features</p>
-          <p>Adolphe</p>
-          <img src="./assets/mobile/features/loves.png" alt="">
+          <div class="features__love">
+            <p>The</p>
+            <p>features</p>
+            <p>Adolphe <img class="loves" src="./assets/mobile/features/loves.png" alt=""> </p>
+          </div>
+          <p>He fell in love with the soul of Sapphire, but not only the soul.
+            Also the way she looks!</p>
+          <img src="./assets/mobile/features/sapphire.png" alt="">
         </div>
       </section>
 
