Add sextion Sapphire mobile

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <main>
-      <section class="intro__background">
-        <div class="intro">
+      <div class="intro__background">
+        <section class="intro">
           <img class="intro__logoMim" src="./assets/mobile/header/logo-MIM.png"
             alt="">
           <div class="intro__body">
@@ -60,8 +60,8 @@
               alt="Yellow love
               heart" />
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
 
       <!-- SectionTwo - About AdolpheSax -->
       <section class="background">
@@ -87,49 +87,42 @@
       </div>
 
       <!-- Adolphe and Sapphire -->
-      <section class="background__sectionThree">
-        <div class="sectionThree">
+      <div class="background__sectionThree">
+        <section class="sectionThree">
           <img class="head__adolphe"
             src="./assets/mobile/adolph-and-sapphire/head-adolphe.png" alt="">
           <img class="flowers"
             src="./assets/mobile/adolph-and-sapphire/heart-flowers.png" alt="">
           <img class="saxophone"
             src="./assets/mobile/adolph-and-sapphire/saxophone.png" alt="">
-        </div>
-      </section>
+        </section>
+      </div>
 
       <!-- Features -->
-
-      <section class="background__features">
-        <div class="features">
+      <div class="background__features">
+        <section class="features">
           <div class="features__love">
             <p>The</p>
             <p>features</p>
-            <p>Adolphe <img class="loves" src="./assets/mobile/features/loves.png" alt=""> </p>
+            <p>Adolphe <img class="loves"
+                src="./assets/mobile/features/loves.png" alt=""> </p>
           </div>
           <p>He fell in love with the soul of Sapphire, but not only the soul.
             Also the way she looks!</p>
           <img src="./assets/mobile/features/sapphire.png" alt="">
+        </section>
+      </div>
+
+
+      <!-- Saxophone features -->
+      <section class="background__sapphire">
+        <div class="sapphire">
+          <img class="sapphire__title" src="./assets/mobile/sapphire/sapphire-title.png" alt="">
+          <p>Mouth</p>
         </div>
+        <img class="sapphire__saxophone" src="./assets/mobile/sapphire/sapphire.png" alt="">
       </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
