Fix main background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main>
-      <div class="intro__background">
+      <div class="background__intro">
         <section class="intro">
           <img class="intro__logoMim" src="./assets/mobile/intro/logo-MIM.png"
             alt="">
@@ -81,10 +81,10 @@
           </div>
           <img class="sectionTwo__secretButton"
             src="./assets/mobile/sectionTwo/secret-button.png" alt="">
-        </section>
-        <!-- <img class="sectionTwo__mannekePis"
-          src="./assets/mobile/sectionTwo/manneke-pis.png" alt=""> -->
-      </div>
+          <!-- <img class="sectionTwo__mannekePis"
+              src="./assets/mobile/sectionTwo/manneke-pis.png" alt=""> -->
+        </div>
+      </section>
 
       <!-- Adolphe and Sapphire -->
       <div class="background__sectionThree">
@@ -119,7 +119,8 @@
             </div>
             <img
               class="image1"
-              src="https://upload.wikimedia.org/wikipedia/commons/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg" alt="Image of me travelling"
+              src="https://upload.wikimedia.org/wikipedia/commons/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg"
+              alt="Image of me travelling"
               />
             <img
               class="image2"
