Fix cutted background

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
           </div>
         </section>
       </div>
-
       <!-- SectionTwo - About AdolpheSax -->
       <section class="background__sectionTwo">
         <div class="sectionTwo">
@@ -85,6 +84,7 @@
               src="./assets/mobile/sectionTwo/manneke-pis.png" alt=""> -->
         </div>
       </section>
+      <div class="cutted__background"></div>
 
       <!-- Adolphe and Sapphire -->
       <div class="background__sectionThree">
