Fix animation arrows

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
           <p class="intro__text--scroll">Scroll down for the full story</p>
 
           <div class="intro__arrows">
-            <img class="arrows arrowOne"
+            <img class="arrows arrow1"
               src="./assets/mobile/intro/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows arrowTwo"
+            <img class="arrows arrow2"
               src="./assets/mobile/intro/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows arrowThree"
+            <img class="arrows arrow3"
               src="./assets/mobile/intro/yellow-arrow.png"
               alt="Yellow love
               heart" />
-            <img class="arrows arrowFour"
+            <img class="arrows arrow4"
               src="./assets/mobile/intro/yellow-arrow.png"
               alt="Yellow love
               heart" />
