Fix animation sectionTwo for header title, mini arrows, sectionTwo p and secret button

--- a/index.html
+++ b/index.html
@@ -65,21 +65,23 @@
       <!-- SectionTwo - About AdolpheSax -->
       <section class="background__sectionTwo">
         <div class="sectionTwo">
-          <h1 class="sectionTwo__title">Adolphe Sax <br> 1814-1894</h1>
+          <div>
+            <h1 class="sectionTwo__title title__name">Adolphe Sax</h1>
+            <h1 class="sectionTwo__title title__date">1814 - 1894</h1>
+          </div>
           <img class="sectionTwo__adolphe"
             src="./assets/mobile/sectionTwo/adolphe-sax-red.png" alt="">
           <div class="sectionTwo__text">
-            <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
-            <p>I am passionned for music and mechanics, and spent my entire life
+            <img class="sectionTwo__miniArrowOne" src="./assets/mobile/sectionTwo/mini-arrow.png" alt="">
+            <p class="sectionTwo__p">I am passionned for music and mechanics, and spent my entire life
               experimenting with different instruments.</p>
           </div>
           <div class="sectionTwo__text">
-            <img src="./assets/mobile/sectionTwo/ mini-arrow.png" alt="">
-            <p>My hometown is Dinant in Belgium and I’m the creator of the
+            <img class="sectionTwo__miniArrowTwo" src="./assets/mobile/sectionTwo/mini-arrow.png" alt="">
+            <p class="sectionTwo__p">My hometown is Dinant in Belgium and I’m the creator of the
               Saxophone. </p>
           </div>
-          <img class="sectionTwo__secretButton"
-            src="./assets/mobile/sectionTwo/secret-button.png" alt="">
+          <img class="sectionTwo__secretButton" src="./assets/mobile/sectionTwo/secret-button.png" alt="">
           <!-- <img class="sectionTwo__mannekePis"
               src="./assets/mobile/sectionTwo/manneke-pis.png" alt=""> -->
         </div>
